# dra-beatriz-lima-site

./: .env.example  .gitignore  .thumbnail  Dockerfile  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  astro.config.mjs  docker-compose.yml  package-lock.json  package.json  readme.md  styles.css  thumbnail.html
.github/workflows/: ci.yml
deck/: DesignSystem.html
guidelines/: brand-duotom.html  brand-gradient.html  brand-hairline-brace.html  brand-lockup.html  brand-motion.html  brand-themes.html  colors-contrast.html  colors-gold.html  colors-neutrals-dark.html  colors-neutrals-light.html  colors-nude.html  colors-status.html  effect-glass.html  effect-metal-bloom.html  effect-nav.html  elevation.html  grid-breakpoints.html  motion-engine.html  motion-parallax.html  motion-reveal.html  motion-split.html  motion-tilt.html  radius.html  space-inuse.html  space-scale.html  token-architecture.html  type-body.html  type-display.html  type-gradient.html  type-scale.html  type-serif-quote.html  type-tracking.html
motion/: bl-motion.js
public/design-system/motion/: bl-init.js
server/: .gitignore  Cargo.toml  README.md
server/src/: capturas.rs  main.rs  simulacoes.rs
specs/: 001-simulacao-mvp-skeleton.md  002-status-fase1-mvp.md
src/: content.config.ts
src/components/: Badge.astro  Button.astro  Disclaimer.astro  Divider.astro  FaceViewer3D.astro  Footer.astro  GradientTitle.astro  Nav.astro  ServiceCard.astro  face-mesh-tesselacao.ts  face-viewer-3d-camera.ts  face-viewer-3d-captura.ts  face-viewer-3d-playback.ts  face-viewer-3d-scene.ts
src/components/design-system/: BrandSplit.astro  ColorRamp.astro  MomentoMovimento.astro  RitmoLuz.astro  SpecimenEyebrow.astro  TypeScale.astro
src/components/secoes/: Hero.astro  Pilares.astro  Posicionamento.astro  TeaserCatalogo.astro  TeaserSimulacao.astro
src/content/procedimentos/: bioestimuladores-de-colageno.md  peelings.md  preenchimento-labial.md  protocolos-de-pele.md  toxina-botulinica-harmonizacao.md
src/design-system/: styles.css
src/design-system/motion/: bl-motion.js
src/design-system/tokens/: base.css  color.css  components.css  effect.css  fonts.css  semantic.css  tokens.json
src/layouts/: BaseLayout.astro
src/pages/: 404.astro  estetica.astro  index.astro  simulacao-3d.astro
src/pages/procedimentos/: [slug].astro  index.astro
templates/design-system-deck/: DesignSystemDeck.dc.html  ds-base.js
tokens/: components.css  scale.css  semantic.css  typography.css
(+2 files in other folders)
